[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "jsonrpc-v2"
version = "0.5.2"
description = "JSONRPC 2.0 server"
keywords = ["jsonrpc", "json-rpc", "jsonrpc2", "rpc"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Deniallugo/jsonrpc-v2"

[features]
easy-errors = []
macros = ["jsonrpc-v2-macros"]

[dependencies]
bytes = "0.5"
erased-serde = "0.3"
futures = { version = "0.3", features = ["compat"] }
futures-v01 = { version = "0.1", package = "futures", optional = true }
async-trait = "0.1.17"
tower-service = { version = "0.3", optional = true }
extensions = "0.2"
jsonrpc-v2-macros = { version = "0.1.0", path = "./jsonrpc-v2-macros", optional = true }
bytes-v04 = { version = "0.4", package = "bytes", optional = true }
log = "0.4.8"
anyhow = "1.0"
paperclip = {version = "0.4.0", features = ["v2", "actix"] }

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
features = ["raw_value"]
version = "1"

[dev-dependencies]
http = "0.1.15"
tokio = { version = "0.2", features = ["full"] }
actix-rt = "1"
